Made teplate pages for intern and manager

--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -12,7 +12,7 @@
 
 
     <div class="card" style="width: 18rem;">
-        <div class="text-light bg-success card-body">
+        <div class="text-center text-light bg-success card-body">
           <h2 class="card-title">Joshua Bidwell</h2>
           <h3 class="card-title"><i class="fas fa-laptop-code"></i>Engineer</h3>
         </div>
