made minor changes to style ffor templates

--- a/templates/manager.html
+++ b/templates/manager.html
@@ -11,7 +11,7 @@
 <body>
 
 
-    <div class="card" style="width: 18rem;">
+    <div class="w-25 employee card">
         <div class="text-center text-light bg-info card-body">
           <h2 class="card-title">Joshua Bidwell</h2>
           <h3 class="card-title"><i class="fas fa-user-tie"></i>Manager</h3>
@@ -19,7 +19,7 @@
         <ul class="list-group list-group-flush">
             <li class="list-group-item">Employee ID: <span>1</span></li>
           <li class="list-group-item">Email: <a href="mailto:jjbidwell262@gmail.com" target="_blank">jjbidwell262@gmail.com</a></li>
-          <li class="list-group-item">Office: <span>25</span></li>
+          <li class="list-group-item">Office Number: <span>25</span></li>
         </ul>
       </div>
 
