--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -11,7 +11,7 @@
 <body>
 
 
-    <div class="card" style="width: 18rem;">
+    <div class="w-25 employee card">
         <div class="text-center text-light bg-success card-body">
           <h2 class="card-title">Joshua Bidwell</h2>
           <h3 class="card-title"><i class="fas fa-laptop-code"></i>Engineer</h3>
