--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-
-    <div class="w-25 employee card">
+<div id="engineer">
+    <div class="employee card">
         <div class="text-center text-light bg-success card-body">
           <h2 class="card-title">Joshua Bidwell</h2>
           <h3 class="card-title"><i class="fas fa-laptop-code"></i>Engineer</h3>
@@ -21,10 +21,12 @@
           <li class="list-group-item">Email: <a href="mailto:jjbidwell262@gmail.com" target="_blank">jjbidwell262@gmail.com</a></li>
           <li class="list-group-item">Github: <a href="https://github.com" target="_blank">jjbidwell</a></li>
         </ul>
-      </div>
+    </div>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="templates.js"></script>
 </body>
 </html>
