--- a/templates/manager.html
+++ b/templates/manager.html
@@ -11,7 +11,7 @@
 <body>
 
 
-    <div class="w-25 employee card">
+    <div id="manager" class="employee card">
         <div class="text-center text-light bg-info card-body">
           <h2 class="card-title">Joshua Bidwell</h2>
           <h3 class="card-title"><i class="fas fa-user-tie"></i>Manager</h3>
@@ -26,5 +26,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="templates.js"></script>
 </body>
 </html>
