--- a/templates/head.html
+++ b/templates/head.html
@@ -9,3 +9,15 @@
 
 </head>
 <body>
+
+    <div id="manager" class="employee card">
+        <div class="text-center text-light bg-info card-body">
+          <h2 class="card-title">{manager-name}</h2>
+          <h3 class="card-title"><i class="fas fa-user-tie"></i>Manager</h3>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">Employee ID: {id}</li>
+          <li class="list-group-item">Email: <a href="mailto:jjbidwell262@gmail.com" target="_blank">{email}</a></li>
+          <li class="list-group-item">Office Number: {office-number}</li>
+        </ul>
+      </div>
