Got it working. Just need to style the last page and write the readme

--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -1,13 +1,16 @@
+
+
 <div id="engineer">
     <div class="employee card">
         <div class="text-center text-light bg-success card-body">
-          <h2 class="card-title">Joshua Bidwell</h2>
-          <h3 class="card-title"><i class="fas fa-laptop-code"></i>Engineer</h3>
+          <h2 class="card-title">{eng-name}</h2>
+          <h3 class="card-title"><i class="fas fa-laptop-code"></i> Engineer</h3>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Employee ID: <span>1</span></li>
-          <li class="list-group-item">Email: <a href="mailto:jjbidwell262@gmail.com" target="_blank">jjbidwell262@gmail.com</a></li>
-          <li class="list-group-item">Github: <a href="https://github.com" target="_blank">jjbidwell</a></li>
+            <li class="list-group-item">Employee ID: {eng-id}</li>
+          <li class="list-group-item">Email: <a href="mailto:{eng-email}" target="_blank">{eng-email}</a></li>
+          <li class="list-group-item">Github: <a href="https://github.com/{github}" target="_blank">{github}</a></li>
         </ul>
     </div>
 </div>
+
