--- a/templates/intern.html
+++ b/templates/intern.html
@@ -1,11 +1,14 @@
+    
+    
     <div id="intern" class="employee card">
         <div class="text-center text-light bg-danger card-body">
-          <h2 class="card-title">Joshua Bidwell</h2>
-          <h3 class="card-title"><i class="fas fa-mug-hot"></i>Intern</h3>
+          <h2 class="card-title">{int-name}</h2>
+          <h3 class="card-title"><i class="fas fa-mug-hot"></i> Intern</h3>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Employee ID: <span>1</span></li>
-          <li class="list-group-item">Email: <a href="mailto:jjbidwell262@gmail.com" target="_blank">jjbidwell262@gmail.com</a></li>
-          <li class="list-group-item">School: <span>University of Florida</span></li>
+            <li class="list-group-item">Employee ID: {int-id}</li>
+          <li class="list-group-item">Email: <a href="mailto:{int-email}" target="_blank">{int-email}</a></li>
+          <li class="list-group-item">School: {school}</li>
         </ul>
       </div>
+
