--- a/templates/head.html
+++ b/templates/head.html
@@ -6,18 +6,21 @@
     <title>My Team</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+  <div class="container">
     <div id="manager" class="employee card">
         <div class="text-center text-light bg-info card-body">
-          <h2 class="card-title">{manager-name}</h2>
+          <h2 class="card-title">{mgmt-name}</h2>
           <h3 class="card-title"><i class="fas fa-user-tie"></i>Manager</h3>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Employee ID: {id}</li>
-          <li class="list-group-item">Email: <a href="mailto:{email}" target="_blank">{email}</a></li>
+            <li class="list-group-item">Employee ID: {mgmt-id}</li>
+          <li class="list-group-item">Email: <a href="mailto:{mgmt-email}" target="_blank">{mgmt-email}</a></li>
           <li class="list-group-item">Office Number: {office-number}</li>
         </ul>
       </div>
+
+
