I'm calling it done. It works well enough, even though it doesn't order the employees by id. Just needs style and readme

--- a/output/style.css
+++ b/output/style.css
@@ -1,5 +1,9 @@
-.employee, .card{
-    color: red;
+h1{
+    font-size: 32px;
+    color: slategrey;
+}
+
+.card{
     width: 18rem;
-    margin: 3% 0px;
+    margin: 5% 0px;
 }
