--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -1,7 +1,7 @@
 
 
-<div id="engineer">
-    <div class="employee card">
+<div class="col col-sm-12 col-md-6 col-lg-4">
+    <div class="card">
         <div class="text-center text-light bg-success card-body">
           <h2 class="card-title">{eng-name}</h2>
           <h3 class="card-title"><i class="fas fa-laptop-code"></i> Engineer</h3>
