--- a/templates/intern.html
+++ b/templates/intern.html
@@ -1,14 +1,14 @@
     
-    
-    <div id="intern" class="employee card">
-        <div class="text-center text-light bg-danger card-body">
-          <h2 class="card-title">{int-name}</h2>
-          <h3 class="card-title"><i class="fas fa-mug-hot"></i> Intern</h3>
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">Employee ID: {int-id}</li>
-          <li class="list-group-item">Email: <a href="mailto:{int-email}" target="_blank">{int-email}</a></li>
-          <li class="list-group-item">School: {school}</li>
-        </ul>
-      </div>
-
+  <div class="col col-sm-12 col-md-6 col-lg-4">
+    <div class="card">
+       <div class="text-center text-light bg-danger card-body">
+        <h2 class="card-title">{int-name}</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot"></i> Intern</h3>
+       </div>
+       <ul class="list-group list-group-flush">
+        <li class="list-group-item">Employee ID: {int-id}</li>
+        <li class="list-group-item">Email: <a href="mailto:{int-email}" target="_blank">{int-email}</a></li>
+        <li class="list-group-item">School: {school}</li>
+      </ul>
+    </div>
+  </div>
