--- a/templates/head.html
+++ b/templates/head.html
@@ -10,17 +10,20 @@
 </head>
 <body>
 
-  <div class="container">
-    <div id="manager" class="employee card">
+<div class="container">
+  <h1 class="text-center">My Team</h1>
+  <div class="row">
+    <div class="col col-sm-12 col-md-6 col-lg-4">
+      <div class="card">
         <div class="text-center text-light bg-info card-body">
           <h2 class="card-title">{mgmt-name}</h2>
           <h3 class="card-title"><i class="fas fa-user-tie"></i>Manager</h3>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Employee ID: {mgmt-id}</li>
+          <li class="list-group-item">Employee ID: {mgmt-id}</li>
           <li class="list-group-item">Email: <a href="mailto:{mgmt-email}" target="_blank">{mgmt-email}</a></li>
           <li class="list-group-item">Office Number: {office-number}</li>
         </ul>
       </div>
-
+    </div>
 
